2011-05-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build doc] Reduce unorthodoxy: Build .info in srcdir.

	* doc/Makefile.am (DISTCLEANFILES): Delete var.

2011-01-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Combine PGRES_COPY_{OUT,IN} descriptions; add xref.

	* doc/guile-pg.twerp (Processing Results) <result status table>:
	Combine ‘PGRES_COPY_OUT’ and ‘PGRES_COPY_IN’; rewrite blurb.

2010-11-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: idquote

	* doc/guile-pg.twerp (qcons quoting): Add @twerpdoc for ‘idquote’.

2010-06-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Sync snapshot files with Guile 1.4.1.119.

	* build-aux/guile.m4.snap: Sync with Guile 1.4.1.119.

2010-06-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use ‘primitive-load’, not ‘load-from-path’.

	* doc/mkinc: Use ‘primitive-load’.

2010-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Rename configure.in to configure.ac.

	* configure.ac: Rename from configure.in.
	* AUTHORS: Update.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.39 (tag v0.39)

	* configure.in (AC_INIT): Bump version to "0.39" for release.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs `pg-set-client-data!', `pg-get-client-data'.

	* doc/guile-pg.twerp (Database Connections): Remove
	@section "Client Data", including two @twerpdoc entries.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop proc `pg-lo-get-connection'.

	* doc/guile-pg.twerp (Large Objects):
	Remove @twerpdoc for `pg-lo-get-connection'.

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.38 (tag v0.38)

	* configure.in (AC_INIT): Bump version to "0.38" for release.

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Mention imminent demise of certain procs.

	* doc/guile-pg.twerp (Processing Results):
	Don't mention `pg-set-client-data!'.
	(Miscellaneous): Use object property in tracing example.

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>
